style.css
/* Add box shadow */

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;    
}

body {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    line-height: 1.5;
}

.header {
    background-color: #1f2937;
}

.header .container {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    padding: 40px 150px;
    justify-content: space-between;
    }

.headerlogo {
    color: #f9faf8;
    font-size: 24px;
    font-weight: bold;
    padding-right: 20px;
}

.headerlinks {
    list-style-type: none;
    display: flex;
    gap: 20px;
}

.headerlinks a {
    text-decoration: none;
    color: #e5e7eb;
    font-size: 18px;
}

.hero {
    background-color: #1f2937;
}

.hero .container {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    padding: 20px 150px 100px 150px;
    justify-content: space-between;
    align-items: stretch;
    gap: 40px;
}

.hero .container .hero-main-text {
    flex: 1;
    min-width: 250px;
    max-width: 450px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 16px;
}

.hero h1 {
    font-family: 'Roboto';
    font-size: 48px;
    font-weight: bold;
    color: #f9faf8;
    line-height: 1.1;    
}

.hero p {
    color: #e5e7eb;
    font-size: 18px;
}

.hero button {
    background-color: #3882f6;
    color: #fff;
    font-size: 14px;
    border-radius: 7px;
    flex-shrink: 0;
    height: 30px;
    width: 110px;
    padding: auto;
}

.hero .placeholder {
    min-width: 450px;
    height: 250px;
    background-color: gray;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero .placeholder p {
    color: #fff;
    font-size: 18px;
}

.boxes .container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 150px;    
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.boxes h1 {
    font-size: 36px;
    text-align: center;
    color: #1f2937;
    padding: 30px 0;
}

.boxes .qc1 {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;    
    gap: 40px;
    padding-bottom: 60px;
}

.boxes .qc1 .bt {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-grow: 0;
    width: 170px;
    gap: 10px;
}

.boxes .qc1 .bt .box {
    width: 170px;
    height: 170px;
    border: 5px solid #3882f6;
    border-radius: 15px;
}

.boxtext {
    font-size: 20px;
    text-align: center;
}

.quote {
    background-color: #e5e7eb;
}

.quote .container {
    gap: 20px;
    max-width: 1100px;
    padding: 100px 150px;
    margin: 0 auto;    
}

.quote .qc1 {
    display: flex;
    flex-direction: column;
    Gap: 20px;
}

.quote .inspired {
    color: #1f2937;
    min-width: 500px;
    font-size: 36px;
    font-style: italic;
    flex-basis: auto;
    align-self: flex-start;
}

.quote .Thor {
    font-size: 24px;
    font-weight: bold;
    align-self: flex-end;
}


.action .container {
    max-width: 1200px;
    padding: 0  150px;
    margin: 0 auto;;
    display: flex;
    justify-content: space-between;
}

.action .ac1 {
    background-color: #3882f6;
    gap: 20px;
    color: #fff;
    margin: 50px 0;
    padding: 40px 80px;
    flex: 1;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.action .container h2 {
    font-size: 24px;
}

.action .container button {
    background-color: #3882f6;
    color: #fff;
    border: 1px solid #fff;
    font-size: 14px;
    border-radius: 7px;
    flex-shrink: 0;
    height: 30px;
    width: 110px;
    padding: auto;
}

.footer {
    background-color: #1f2937;
    color: #fff;
    font-size: 12px;
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;    
}

